cmake_minimum_required(VERSION 3.16)
project(tirex_slstm_cell LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT DEFINED ENV{ASCEND_CANN_PACKAGE_PATH})
    if(NOT DEFINED ENV{ASCEND_TOOLKIT_HOME})
        set(ASCEND_CANN_PACKAGE_PATH "/usr/local/Ascend/ascend-toolkit/latest")
    else()
        set(ASCEND_CANN_PACKAGE_PATH $ENV{ASCEND_TOOLKIT_HOME})
    endif()
else()
    set(ASCEND_CANN_PACKAGE_PATH $ENV{ASCEND_CANN_PACKAGE_PATH})
endif()

set(SOC_VERSION "Ascend910B1" CACHE STRING "SOC version")

if(EXISTS "${ASCEND_CANN_PACKAGE_PATH}/tikcpp/ascendc_kernel_cmake")
    set(ASCENDC_CMAKE_PATH "${ASCEND_CANN_PACKAGE_PATH}/tikcpp/ascendc_kernel_cmake")
elseif(EXISTS "${ASCEND_CANN_PACKAGE_PATH}/x86_64-linux/tikcpp/ascendc_kernel_cmake")
    set(ASCENDC_CMAKE_PATH "${ASCEND_CANN_PACKAGE_PATH}/x86_64-linux/tikcpp/ascendc_kernel_cmake")
elseif(EXISTS "${ASCEND_CANN_PACKAGE_PATH}/aarch64-linux/tikcpp/ascendc_kernel_cmake")
    set(ASCENDC_CMAKE_PATH "${ASCEND_CANN_PACKAGE_PATH}/aarch64-linux/tikcpp/ascendc_kernel_cmake")
else()
    message(STATUS "Cannot find ascendc_kernel_cmake directory; skip local build on this host.")
endif()

if(ASCENDC_CMAKE_PATH AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/op_kernel/tirex_slstm_cell_kernel.cpp")
    include(${ASCENDC_CMAKE_PATH}/ascendc.cmake)
    ascendc_library(tirex_slstm_cell_kernel_lib SHARED op_kernel/tirex_slstm_cell_kernel.cpp)
    ascendc_include_directories(tirex_slstm_cell_kernel_lib PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/op_kernel ${CMAKE_CURRENT_SOURCE_DIR}/op_host)
    file(GLOB OP_HOST_SRC CONFIGURE_DEPENDS op_host/*.cpp)
    if(OP_HOST_SRC)
        add_library(tirex_slstm_cell_op_def SHARED ${OP_HOST_SRC})
        target_include_directories(tirex_slstm_cell_op_def PRIVATE ${ASCEND_CANN_PACKAGE_PATH}/include ${CMAKE_CURRENT_SOURCE_DIR}/op_host)
    else()
        message(STATUS "No materialized op_host cpp in this migrated directory; use scripts/build*.py on CANN host if provided.")
    endif()
endif()
